--- a/cohorts/2023/04-deployment/homework/starter.ipynb
+++ b/cohorts/2023/04-deployment/homework/starter.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2c51efaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scikit-learn==1.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "!pip freeze | grep scikit-learn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0ef880a0",
    "metadata": {},
    "outputs": [],
@@ -23,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7836ccfd",
    "metadata": {},
    "outputs": [],
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41c08294",
    "metadata": {},
    "outputs": [],
@@ -56,17 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4854399a",
+   "execution_count": 10,
+   "id": "e55bf268",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_????-??.parquet')"
+    "DATA_YEAR = 2022\n",
+    "DATA_MONTH = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "id": "4854399a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = read_data('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{:d}-{:02d}.parquet'.format(\n",
+    "    DATA_YEAR,\n",
+    "    DATA_MONTH,\n",
+    "))\n",
+    "\n",
+    "df['ride_id'] = '{year:04d}/{month:02d}_'.format(\n",
+    "    year=DATA_YEAR,\n",
+    "    month=DATA_MONTH,\n",
+    ") + df.index.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "669fda0a",
    "metadata": {},
    "outputs": [],
@@ -75,11 +102,88 @@
     "X_val = dv.transform(dicts)\n",
     "y_pred = model.predict(X_val)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1c886ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.28140357655334"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "47d7e932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result = pd.DataFrame({\n",
+    "    'ride_id': df['ride_id'],\n",
+    "    'predictions': y_pred,\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9ae17c7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118792 -rw-r--r--  1 vladimir  staff    57M Jun 25 22:26 output/predictions.parquet\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "При выполнении кода в текущей ячейке или предыдущей ячейке ядро аварийно завершило работу. Проверьте код в ячейках, чтобы определить возможную причину сбоя. Щелкните <a href=\"https://aka.ms/vscodeJupyterKernelCrash\">здесь</a> для получения дополнительных сведений. Подробнее см. в <a href='command:jupyter.viewOutput'>журнале Jupyter</a>."
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir -p output\n",
+    "\n",
+    "df_result.to_parquet(\n",
+    "    'output/predictions.parquet',\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")\n",
+    "\n",
+    "!ls -lsh 'output/predictions.parquet'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a8feec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('ml-py38')",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +197,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d95bd4f1fbfa19b20603f5633c3220953d94f5862afc08049fd3a5b218bbe33a"
+   }
   }
  },
  "nbformat": 4,
